--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@
   padding: 10px;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .card{
   background-color: rgba(153, 153, 153, 0.4);
   display: flex;
