--- a/src/App.css
+++ b/src/App.css
@@ -25,10 +25,10 @@
   text-align: center;
   background-image: url("/public/Hero.jpg");
   width: 100%;
-  height: 500px;
+  height: 700px;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
 }
 
 .Hero h1{
